<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@color/white">
    <ImageView
        android:id="@+id/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/shape"
        android:text="@string/welcome_to_sneakersuds"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/nunito_bold"
        />
    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        android:background="@drawable/backgroundsp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="410dp"
            android:layout_height="350dp">


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_semibold"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="108dp"
                android:background="@drawable/rectangle"
                android:fontFamily="@font/poppins_semibold"
                android:hint="Password"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle_1"
                android:fontFamily="@font/poppins_semibold"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.623" />

            <TextView
                android:id="@+id/textDont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/don_t_have_an_account"
                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textDont" />
        </androidx.constraintlayout.widget.ConstraintLayout>




    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>